--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <h2>Tentang Saya</h2>
     <p>Saya Muhammad Dhiyaulhaq Aryva dari jurusan S1 Sistem Informasi sedang menjalani studi S1 di Telkom University.</p>
+    <p class="center-text"> 
+        <a href="portofolio.html">portofolio</a>
+    </p>
+
     
 </body>
 </html>
