--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Tentang Saya</h2>
     <p>Saya Muhammad Dhiyaulhaq Aryva dari jurusan S1 Sistem Informasi sedang menjalani studi S1 di Telkom University.</p>
     <p> 
-        <a href="portofolio.html">portofolio</a>
+        <a style= "text-decoration: none; color: black;" href="portofolio.html">portofolio</a>
     </p>
 
     
