--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Riwayat Hidup</h1>
 
-    <img src="pas poto.jpg" width="10%" height="10%" style="display: block; margin-left: auto; margin-right: auto; />
+    <img src="pas poto.jpg" width="10%" height="10%" style="display: block; margin-left: auto; margin-right: auto;" />
     <h2>Data Diri</h2>
     <ul>
         <li>Nama : Muhammad Dhiyaulhaq Aryva</li>
